src/main/java/org/example/error/ErrorHandler.java
package org.example.error;

public interface ErrorHandler {

	void handleError(ErrorDetails errorDetails) throws Exception;

}
